<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pusatgadaiindonesia.app.Interface.Homescreen.Homescreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.viewpager.widget.ViewPager
            android:layout_marginBottom="28dp"
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/lay_tablayout_new"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingTop="4dp"
            android:background="@drawable/background_tablayout">
            <LinearLayout
                android:id="@+id/beranda"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imgBeranda"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/menu1_selected" />
                <TextView
                    android:id="@+id/txtBeranda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beranda"
                    android:textSize="9sp"
                    android:textColor="@color/blue_selected"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/kontrak"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imgKontrak"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/menu2_unselected" />
                <TextView
                    android:id="@+id/txtKontrak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kontrak"
                    android:textSize="9sp"
                    android:textColor="@color/grey_unselected"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profil"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/imgProfil"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/menu3_unselected"/>
                <TextView
                    android:id="@+id/txtProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil"
                    android:textSize="9sp"
                    android:textColor="@color/grey_unselected"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bantuan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imgBantuan"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/menu4_unselected" />
                <TextView
                    android:id="@+id/txtBantuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bantuan"
                    android:textSize="9sp"
                    android:textColor="#0d0d0d"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabLayout
            android:background="#ffffff"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingBottom="5dp"
            app:tabMode="fixed"
            app:tabGravity="fill" />
    </RelativeLayout>
</LinearLayout>
