<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:background="@drawable/background_dialog_balance_white_all_rounded"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/pay" />

        <TextView
            android:id="@+id/s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView5"
            android:fontFamily="@font/century_gothic_bold"
            android:padding="12dp"
            android:text="@string/dialog_title_batal_transaksi"
            android:textAlignment="center"
            android:textColor="@color/blue_dark_beranda"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/batalkan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/red_dark_beranda"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic_bold"
                    android:text="@string/btn_batal_transaksi"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lanjut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/blue_dark_beranda"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/century_gothic_bold"
                    android:text="@string/btn_lanjut_transaksi"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
